--- a/public/terms1.html
+++ b/public/terms1.html
@@ -58,7 +58,7 @@
   </ol>
 
   <h2>제6조(개인정보보호)</h2>
-  <p>회사는 관련 법령 및 개인정보보호정책에 따라 이용자의 개인정보를 보호합니다. 자세한 내용은 별도로 게시한 <a href="/privacy.html">개인정보취급방침</a>을 따릅니다.</p>
+  <p>회사는 관련 법령 및 개인정보보호정책에 따라 이용자의 개인정보를 보호합니다. 자세한 내용은 별도로 게시한 <a href="/privacy1.html">개인정보취급방침</a>을 따릅니다.</p>
 
   <h2>제7조(회사의 의무)</h2>
   <ol>
