결제전환보정

--- a/public/terms1.html
+++ b/public/terms1.html
@@ -96,7 +96,7 @@
   </ol>
 
   <h2>제12조(재판관할)</h2>
-  <p>본 약관과 관련된 분쟁은 대한민국 법을 적용하며, 관할 법원은 서울중앙지방법원으로 합니다.</p>
+  <p>본 약관과 관련된 분쟁은 대한민국 법을 적용하며, 관할 법원은 주소지 소재 관할법원으로 합니다.</p>
 
   <hr>
   <p>본 약관은 2025년 10월 1일부터 시행합니다.</p>
