--- a/public/terms1.html
+++ b/public/terms1.html
@@ -84,7 +84,7 @@
     <li>이용자는 결제 후 **당일 기준 한번도 사용하지 않은 경우에 한해서만 취소가 가능**하며, 미사용에 따라 당일내 정상적으로 접수된 경우 **결제금액 전액 환불**이 가능합니다.</li>
     <li>1회라도 사용한 이후에는 **취소 및 환불이 불가**합니다.</li>
     <li>예를들어 결제한 날에 **오늘 남은 횟수 (20/20) / 누적 총 35회** 이렇게 되어 있으면 당일 미 사용이며 **오늘 남은 횟수 (19/20) / 누적 총 36회** 이렇게 되면 1회 사용에 해당합니다. 이는 무료로 제공되는 횟수와 구분이 안되므로 결제일에 무료 사용은 유료사용에 포함됩니다</li>
-    <li>정기구독(월 결제) 서비스의 경우, **위와 같은 조건**을 따르며, 사용 이후에는 해당 결제기간(1개월) 동안 서비스가 유지되며 중도해지 환불은 제공되지 않습니다.</li>
+    <li>정기구독(월 결제) 서비스란 한번 구매를 하면 매월 같은 날에 자동으로 구매가 이루어지는 상품을 말합니다. 취소는 결제가 이루어지기 전이면 언제나 가능하며 미리 구독 취소를 하면 더 이상 자동결제가 이루어지지 않습니다. 결제가 이루어 진 이후에 취소를 하면 결제날 기준 앱을 전혀 사용하지 않은 경우에 한해서 전액 환불이 가능하며 단 1회라고 사용한 경우에는 환불이 불가하며  해당 결제기간(1개월) 동안 서비스가 유지되며 중도해지 환불은 제공되지 않습니다.</li>
     <li>단, 서비스 장애나 회사의 귀책사유로 인해 정상적인 이용이 불가능한 경우에는 전자상거래법에 따라 환불 조치합니다.</li>
   </ol>
 
