결제전환보정

--- a/public/index.html
+++ b/public/index.html
@@ -871,32 +871,32 @@
     ">
     <div style="display:flex; gap:8px;">
       <div style="min-width: 110px; color:#666;">상호명</div>
-      <div itemprop="name"><strong><!-- 예: 트리만세력 --></strong></div>
+      <div itemprop="name"><strong>트리사주</strong></div>
     </div>
 
     <div style="display:flex; gap:8px;">
       <div style="min-width: 110px; color:#666;">대표자명</div>
-      <div itemprop="founder"><!-- 예: 홍길동 --></div>
+      <div itemprop="founder">유섬근</div>
     </div>
 
     <div style="display:flex; gap:8px;">
       <div style="min-width: 110px; color:#666;">사업장주소</div>
       <div itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
-        <!-- 예: 서울특별시 ○○구 ○○로 123, 3층 -->
+        서울시 송파구 법원로4길 10 힐스테이트에코문정 1125
         <span itemprop="streetAddress"></span>
       </div>
     </div>
 
     <div style="display:flex; gap:8px;">
       <div style="min-width: 110px; color:#666;">사업자등록번호</div>
-      <div><!-- 예: 123-45-67890 --></div>
+      <div>795-40-01592</div>
     </div>
 
     <div style="display:flex; gap:8px;">
       <div style="min-width: 110px; color:#666;">대표전화번호</div>
       <div>
         <a href="tel:" itemprop="telephone" style="color:inherit; text-decoration:underline;">
-          <!-- 예: 02-1234-5678 -->
+          010-4749-2139
         </a>
       </div>
     </div>
@@ -905,7 +905,7 @@
       <div style="min-width: 110px; color:#666;">대표이메일</div>
       <div>
         <a href="mailto:" itemprop="email" style="color:inherit; text-decoration:underline;">
-          <!-- 예: help@example.com -->
+          yyulss@naver.com
         </a>
       </div>
     </div>
