--- a/public/index2선택안됨.html
+++ b/public/index2선택안됨.html
@@ -809,7 +809,7 @@
 
 
 <div class="note-box">
-  ※ 태어난 분대가 20~40분(30분 근처)에 있는 분은 정확한 시주가 산출되지 않을 수도 있으니 따로 확인해 주세요! 한국썸머타임은 적용된 상태입니다.
+  ※ 태어난 분대가 20~40분(30분 근처)에 있는 분은 정확한 시주가 산출되지 않을 수도 <br>있으니 따로 확인해 주세요! 한국썸머타임은 적용된 상태입니다.
   <br>
   <span class="note-links">
     <a href="/terms1.html">이용약관</a> |
