결제전환보정

--- a/public/index.html
+++ b/public/index.html
@@ -837,7 +837,7 @@
   <!-- 기존 버튼 -->
   <button type="button" id="sajuSubmit" class="btn-success">사주식 출력</button>
   <button type="button" id="sinsalBtn" class="btn-success">신살보기</button>
-<span id="count-display"></span>
+<br><span id="count-display"></span>
  
   </form>
 
