--- a/public/index.html
+++ b/public/index.html
@@ -75,69 +75,13 @@
   .hero-left{ position:static; margin-bottom:16px; }
 }
 
-
-
-
-
-  /* 덩굴 테두리 컨테이너 전체 감싸기 */
-.vine-border-container {
-  position: relative;
-  display: inline-block;   /* ✅ 내용 크기만큼만 박스 크기 */
-  padding: 40px;
-  max-width: 100%;       /* ✅ 화면 전체 폭까지 가능 */
-  width: auto;           /* ✅ 내용 크기에 맞게 기본은 auto */
-  margin: 40px auto 80px auto;
-  background-color: transparent;
-  border: none;
-  border-radius: 0;
-  overflow: visible;     /* 넝쿨 이미지가 영역 밖에 있을 수 있게 */
+  /* 구분선 */
+.section-split{
+  border:0;
+  border-top:1px solid #e5e7eb; /* 연한 회색 */
+  margin:20px 0;                /* 위아래 간격 */
 }
 
-  /* 흐릿한 배경 (내용 전체 배경 역할) */
-  .text-bg {
-    position: absolute;
-    top: 0; left: 0; right: 0; bottom: 0;
-    background-color: rgba(255, 255, 255, 0.7);
-    border-radius: 10px;
-    z-index: 1;
-    pointer-events: none;
-  }
-
-/* 덩굴 이미지 4모서리 */
-.vine-deco {
-  position: absolute;
-  width: 150px; 
-  height: 150px;
-  background-image: url('/images/vine.png');
-  background-size: contain;
-  background-repeat: no-repeat;
-  opacity: 1;
-  pointer-events: none;   /* 입력 가리지 않음 */
-  z-index: 9999;          /* ✅ 덩굴을 항상 맨 위로 */
-}
-
-.vine-top-left {
-  top: 0; left: 0;
-  transform: rotate(180deg);
-}
-.vine-top-right {
-  top: 0; right: 0;
-  transform: scaleX(-1) rotate(180deg);
-}
-.vine-bottom-left {
-  bottom: 0; left: 0;
-  transform: scaleY(-1) rotate(180deg);
-}
-.vine-bottom-right {
-  bottom: 0; right: 0;
-  transform: scaleX(-1) scaleY(-1) rotate(180deg);
-}
-
-/* 내부 콘텐츠 영역 - 덩굴보다 뒤에 위치 */
-.vine-border-container > *:not(.text-bg):not(.vine-deco) {
-  position: relative;
-  z-index: 1;   /* ✅ 덩굴보다 낮게 */
-}
 
   /* 제목, 폼 스타일 */
   h1 {
@@ -860,7 +804,7 @@
 
 
 
-
+<hr class="section-split">
 
 
 
