결제전환보정

--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
   /* 구분선 */
 .section-split{
   border:0;
-  border-top:1px solid #e5e7eb; /* 연한 회색 */
+  border-top:1px solid #7293d6; /* 연한 회색 */
   margin:20px 0;                /* 위아래 간격 */
 }
 
