결제전환보정

--- a/public/index.html
+++ b/public/index.html
@@ -770,8 +770,8 @@
 </select><br />
 
   <!-- 기존 버튼 -->
-  <button type="button" id="sajuSubmit" class="btn-success">사주식 출력</button>
-  <button type="button" id="sinsalBtn" class="btn-success">신살보기</button>
+  <button type="button" id="sajuSubmit" class="btn-success">사주정보 출력</button>
+  <button type="button" id="sinsalBtn" class="btn-success">12운성[12신살]</button>
 <br><span id="count-display"></span>
  
   </form>
