--- a/public/index2선택안됨.html
+++ b/public/index2선택안됨.html
@@ -55,65 +55,33 @@
     background-color: #f8f8f8;
   }
 
-  /* 덩굴 테두리 컨테이너 전체 감싸기 */
-.vine-border-container {
-  position: relative;
-  display: inline-block;   /* ✅ 내용 크기만큼만 박스 크기 */
-  padding: 40px;
-  max-width: 100%;       /* ✅ 화면 전체 폭까지 가능 */
-  width: auto;           /* ✅ 내용 크기에 맞게 기본은 auto */
-  margin: 40px auto 80px auto;
-  background-color: transparent;
-  border: none;
-  border-radius: 0;
-  overflow: visible;     /* 넝쿨 이미지가 영역 밖에 있을 수 있게 */
+    /* 사주트리나무 그림 */
+
+.landing-wrap{
+  display:flex; gap:24px; align-items:flex-start; margin-top:8px;
+}
+.hero-left{
+  flex:1; position:sticky; top:12px; /* 스크롤해도 살짝 고정되어 보이게 */
+}
+.hero-right{
+  flex:1.25; min-width:360px;
+}
+.hero-left img{
+  display:block; width:100%; height:auto;
+  border-radius:14px; box-shadow:0 10px 24px rgba(0,0,0,.08);
+}
+@media (max-width: 900px){
+  .landing-wrap{ display:block; }
+  .hero-left{ position:static; margin-bottom:16px; }
 }
 
-  /* 흐릿한 배경 (내용 전체 배경 역할) */
-  .text-bg {
-    position: absolute;
-    top: 0; left: 0; right: 0; bottom: 0;
-    background-color: rgba(255, 255, 255, 0.7);
-    border-radius: 10px;
-    z-index: 1;
-    pointer-events: none;
-  }
-
-/* 덩굴 이미지 4모서리 */
-.vine-deco {
-  position: absolute;
-  width: 150px; 
-  height: 150px;
-  background-image: url('/images/vine.png');
-  background-size: contain;
-  background-repeat: no-repeat;
-  opacity: 1;
-  pointer-events: none;   /* 입력 가리지 않음 */
-  z-index: 9999;          /* ✅ 덩굴을 항상 맨 위로 */
+  /* 구분선 */
+.section-split{
+  border:0;
+  border-top:1px solid #0f6105; /* 연한 회색 */
+  margin:20px 0;                /* 위아래 간격 */
 }
 
-.vine-top-left {
-  top: 0; left: 0;
-  transform: rotate(180deg);
-}
-.vine-top-right {
-  top: 0; right: 0;
-  transform: scaleX(-1) rotate(180deg);
-}
-.vine-bottom-left {
-  bottom: 0; left: 0;
-  transform: scaleY(-1) rotate(180deg);
-}
-.vine-bottom-right {
-  bottom: 0; right: 0;
-  transform: scaleX(-1) scaleY(-1) rotate(180deg);
-}
-
-/* 내부 콘텐츠 영역 - 덩굴보다 뒤에 위치 */
-.vine-border-container > *:not(.text-bg):not(.vine-deco) {
-  position: relative;
-  z-index: 1;   /* ✅ 덩굴보다 낮게 */
-}
 
   /* 제목, 폼 스타일 */
   h1 {
@@ -461,22 +429,25 @@
 </head>
 <body>
 
-<!-- 덩굴 테두리 컨테이너가 페이지 내용 전체 감싸기 -->
-<div class="vine-border-container">
-  <div class="text-bg"></div>
-
-  <div class="vine-deco vine-top-left"></div>
-  <div class="vine-deco vine-top-right"></div>
-  <div class="vine-deco vine-bottom-left"></div>
-  <div class="vine-deco vine-bottom-right"></div>
 
 
 
 
 
 
-
-
+<!-- 첫 <table> 바로 위에 추가 -->
+<div class="landing-wrap">
+  <div class="hero-left">
+    <picture>
+      <source srcset="/images/tree-hero.webp" type="image/webp" />
+      <img src="/images/tree-hero.jpg"
+           alt="손 위에 뿌리를 내린 나무"
+           width="900" height="700"
+           loading="lazy" decoding="async"
+           style="max-width:100%;height:auto;" />
+    </picture>
+  </div>
+  <div class="hero-right">
 
 
 
@@ -799,9 +770,9 @@
 </select><br />
 
   <!-- 기존 버튼 -->
-  <button type="button" id="sajuSubmit" class="btn-success">사주식 출력</button>
-  <button type="button" id="sinsalBtn" class="btn-success">신살보기</button>
-<span id="count-display"></span>
+  <button type="button" id="sajuSubmit" class="btn-success">사주정보 출력</button>
+  <button type="button" id="sinsalBtn" class="btn-success">12운성[12신살]</button>
+<br><span id="count-display"></span>
  
   </form>
 
@@ -820,8 +791,34 @@
 
 
 </div>
-<div id="result" style="display:none;">
 
+
+
+
+  </div><!-- /.hero-right -->
+</div><!-- /.landing-wrap -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- 이하 사주데이터 출력부 -->
+<div id="result" style="display:none;">
+<hr class="section-split">
 <!-- 공통 (항상 표시) -->
 <div id="common-section">
   <div id="birth-info"></div>
