--- a/public/index.html
+++ b/public/index.html
@@ -416,6 +416,14 @@
   border-radius: 8px;             /* 필요 시 유지 */
 }
 
+/* 상단 헤더 전체 파란 톤 */
+#unseong-block .unseong-table .tophead th { background: #e9f5ff !important; }
+
+/* 중간 헤더(지지 값 라인)는 그대로 노랑 */
+#unseong-block .unseong-table thead tr.midhead th {
+  background: #fff7d6 !important;
+}
+
 </style>
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
