--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
   window.client = window.supabaseClient;
   console.log("[INDEX] supabaseClient ready:", !!window.supabaseClient);
 </script>
-
+<script src=".../tooltip.js"></script>
   <script src="https://cdn.iamport.kr/js/iamport.payment-1.2.0.js"></script>
 
 <style>
