결제전환보정

--- a/public/index.html
+++ b/public/index.html
@@ -424,6 +424,8 @@
   background: #fff7d6 !important;
 }
 
+#term-help-pop { pointer-events: none; }
+
 </style>
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
