결제전환보정

--- a/public/index.html
+++ b/public/index.html
@@ -161,6 +161,8 @@
   display: none;
 }
 
+.explainable { cursor: pointer !important; }
+.explainable::after { display: none !important; }
 
 
 .tooltip {
