결제전환보정

--- a/public/index.html
+++ b/public/index.html
@@ -65,10 +65,15 @@
 .hero-right{
   flex:1.25; min-width:360px;
 }
-.hero-left img{
-  display:block; width:100%; height:auto;
-  border-radius:14px; box-shadow:0 10px 24px rgba(0,0,0,.08);
+.hero-left img {
+  display: block;
+  width: 100%;
+  height: auto;
+  border-radius: 14px;
+  box-shadow: 0 10px 24px rgba(0,0,0,.08);
+  background-color: #f8f8f8; /* ← 추가 */
 }
+
 @media (max-width: 900px){
   .landing-wrap{ display:block; }
   .hero-left{ position:static; margin-bottom:16px; }
