결제전환보정

--- a/public/index.html
+++ b/public/index.html
@@ -187,6 +187,14 @@ body {
   display: none;
 }
 
+
+
+#sinsal-box .unseong-tag,
+#sinsal-box .twelve-sinsal-tag,
+#sinsal-box .ten-god { display:block; width:100%; height:100%; padding:4px 0; }
+
+
+
 .explainable { cursor: pointer !important; }
 .explainable::after { display: none !important; }
   .explainable {
