결제전환보정

--- a/public/index.html
+++ b/public/index.html
@@ -194,6 +194,12 @@ body {
 #sinsal-box .ten-god { display:block; width:100%; height:100%; padding:4px 0; }
 
 
+/* 렌더 CSS(centerStyle 등) 어딘가에 추가 */
+.unseong-tag,
+.twelve-sinsal-tag,
+.ten-god {
+  display: block; width: 100%; height: 100%; padding: 4px 0;
+}
 
 .explainable { cursor: pointer !important; }
 .explainable::after { display: none !important; }
