결제전환보정

--- a/public/index.html
+++ b/public/index.html
@@ -523,6 +523,9 @@ body {
   display:inline-block; padding:2px 6px; border:1px solid #e7e7ee; border-radius:6px; margin:2px 2px 0 0; background:#fbfbfe;
 }
 
+.saju-mini thead th, .saju-mini td { text-align: center; }
+
+
 /* 접힘 상태 */
 .saju-mini.is-min .saju-mini__body{ display:none; }
 
