결제전환보정

--- a/public/index.html
+++ b/public/index.html
@@ -529,6 +529,17 @@ body {
 /* 접힘 상태 */
 .saju-mini.is-min .saju-mini__body{ display:none; }
 
+/* ── 미니 사주 표 최소 글씨/여백 ───────────────────────── */
+#saju-mini { font-size: 12px; }                   /* 기본 폰트 크기 ↓ */
+#saju-mini .mini-grid { font-size: 11px; }        /* 표 안 폰트 더 ↓ */
+#saju-mini thead th, 
+#saju-mini td { text-align: center; }
+#saju-mini th, 
+#saju-mini td { padding: 2px 3px; line-height: 1.1; }  /* 여백/줄간격 압축 */
+#saju-mini small { font-size: .75em; color: #666; }     /* 십신 괄호 */
+#saju-mini .saju-chip { 
+  font-size: 10px; padding: 1px 4px; border-radius: 4px; 
+}
 
 
 /* 작은 창 끝 */
