결제전환보정

--- a/public/index.html
+++ b/public/index.html
@@ -494,7 +494,12 @@ body {
   display:flex; align-items:center; justify-content:space-between;
   gap:8px;
   padding:8px 10px;
-  background: linear-gradient(180deg,#f7f7f9,#efeff3);
+    background: linear-gradient(
+    90deg,
+    #e6fbd4 0 8px,         /* 왼쪽 연두 */
+    #ffffff 8px calc(100% - 8px), /* 중앙 흰색 */
+    #e6fbd4 calc(100% - 8px) 100% /* 오른쪽 연두 */
+  );
   border-bottom:1px solid #e6e6ea;
   cursor: move;                 /* 드래그 가능 느낌 */
   user-select: none;
