결제전환보정

--- a/public/index.html
+++ b/public/index.html
@@ -497,7 +497,7 @@ body {
     background: linear-gradient(
     90deg,
     #e6fbd4 0 8px,         /* 왼쪽 연두 */
-    #ffffff 8px calc(100% - 8px), /* 중앙 흰색 */
+    #e6fbd4 8px calc(100% - 8px), /* 중앙 흰색 */
     #e6fbd4 calc(100% - 8px) 100% /* 오른쪽 연두 */
   );
   border-bottom:1px solid #e6e6ea;
