--- a/public/index.html
+++ b/public/index.html
@@ -496,9 +496,9 @@ body {
   padding:8px 10px;
     background: linear-gradient(
     90deg,
-    #e6fbd4 0 8px,         /* 왼쪽 연두 */
-    #e6fbd4 8px calc(100% - 8px), /* 중앙 흰색 */
-    #e6fbd4 calc(100% - 8px) 100% /* 오른쪽 연두 */
+    #9cf89c 0 8px,         /* 왼쪽 연두 */
+    #9cf89c 8px calc(100% - 8px), /* 중앙 흰색 */
+    #9cf89c calc(100% - 8px) 100% /* 오른쪽 연두 */
   );
   border-bottom:1px solid #e6e6ea;
   cursor: move;                 /* 드래그 가능 느낌 */
