결제전환보정

--- a/public/index.html
+++ b/public/index.html
@@ -545,6 +545,8 @@ body {
 #saju-mini .saju-chip { 
   font-size: 10px; padding: 1px 4px; border-radius: 4px; 
 }
+#saju-mini { z-index: 2147483647; }
+#saju-mini, #saju-mini * { pointer-events: auto; }
 
 
 /* 작은 창 끝 */
