미니창 생서

--- a/public/index.html
+++ b/public/index.html
@@ -485,7 +485,7 @@ body {
   box-shadow:0 10px 30px rgba(0,0,0,.18);
   font-family: system-ui, -apple-system, Segoe UI, Roboto, "Noto Sans KR", sans-serif;
   font-size: 14px;
-  color:#222;
+  color:#fdfcfc;
   z-index: 9999;
   overflow: hidden;
 }
@@ -496,9 +496,9 @@ body {
   padding:8px 10px;
     background: linear-gradient(
     90deg,
-    #9cf89c 0 8px,         /* 왼쪽 연두 */
-    #9cf89c 8px calc(100% - 8px), /* 중앙 흰색 */
-    #9cf89c calc(100% - 8px) 100% /* 오른쪽 연두 */
+    #28a745 0 8px,         /* 왼쪽 연두 */
+    #28a745 8px calc(100% - 8px), /* 중앙 흰색 */
+    #28a745 calc(100% - 8px) 100% /* 오른쪽 연두 */
   );
   border-bottom:1px solid #e6e6ea;
   cursor: move;                 /* 드래그 가능 느낌 */
