--- a/public/index.html
+++ b/public/index.html
@@ -479,13 +479,13 @@ body {
   bottom: 16px;
   width: 300px;
   max-width: calc(100vw - 24px);
-  background:#fff;
+  background:#f8f1c9;
   border:1px solid #ddd;
   border-radius:12px;
   box-shadow:0 10px 30px rgba(0,0,0,.18);
   font-family: system-ui, -apple-system, Segoe UI, Roboto, "Noto Sans KR", sans-serif;
   font-size: 14px;
-  color:#fdfcfc;
+  color:#222;
   z-index: 9999;
   overflow: hidden;
 }
