미니창 생서

--- a/public/index.html
+++ b/public/index.html
@@ -496,9 +496,9 @@ body {
   padding:8px 10px;
     background: linear-gradient(
     90deg,
-    #28a745 0 8px,         /* 왼쪽 연두 */
-    #28a745 8px calc(100% - 8px), /* 중앙 흰색 */
-    #28a745 calc(100% - 8px) 100% /* 오른쪽 연두 */
+    #e8f0c8 0 8px,         /* 왼쪽 연두 */
+    #e8f0c8 8px calc(100% - 8px), /* 중앙 흰색 */
+    #e8f0c8 calc(100% - 8px) 100% /* 오른쪽 연두 */
   );
   border-bottom:1px solid #e6e6ea;
   cursor: move;                 /* 드래그 가능 느낌 */
