미니창 생서

--- a/public/index.html
+++ b/public/index.html
@@ -922,7 +922,8 @@ body {
   <span class="note-links">
     <a href="/terms1.html">이용약관</a> |
     <a href="/privacy1.html">개인정보취급방침</a> |
-    <a href="/business-info1.html">사업자정보확인</a>
+    <a href="/business-info1.html">사업자정보확인</a> |
+      <a href="/refund.html">교환 및 환불규정</a>
   </span>
 </div>
 
