--- a/public/business-info1.html
+++ b/public/business-info1.html
@@ -41,15 +41,17 @@
       <a href="https://www.ftc.go.kr/bizCommPop.do?wrkr_no=[1221339843]" target="_blank">공정거래위원회 사업자정보 확인하기</a>
     </p>
   </div>
-  <footer>
-    <a href="https://treesaju.vercel.app/">🏠 홈으로 가기</a><br>
-    <span style="display:inline-block; margin-top:6px;">
-      <a href="/terms1.html">이용약관</a> |
-      <a href="/privacy1.html">개인정보취급방침</a> |
-      <a href="/business-info1.html">사업자정보확인</a> |
-      <a href="/refund.html">교환 및 환불규정</a>
-    </span>
-  </footer>
+
+  <div style="margin-top:30px; text-align:center; font-size:13px; color:#555; line-height:1.6;">
+  <a href="https://treesaju.vercel.app/" style="text-decoration:none; color:#333;">🏠 홈으로 가기</a>
+  <br>
+  <span style="display:inline-block; margin-top:6px;">
+    <a href="/terms1.html" style="color:#333; text-decoration:none; margin:0 4px;">이용약관</a> |
+    <a href="/privacy1.html" style="color:#333; text-decoration:none; margin:0 4px;">개인정보취급방침</a> |
+    <a href="/business-info1.html" style="color:#333; text-decoration:none; margin:0 4px;">사업자정보확인</a> |
+      <a href="/refund.html" style="color:#333; text-decoration:none; margin:0 4px;">교환 및 환불규정</a>
+  </span>
+</div>
 
 </body>
 </html>
