미니창 생서

--- a/public/index2선택안됨.html
+++ b/public/index2선택안됨.html
@@ -535,8 +535,8 @@ body {
 .saju-mini.is-min .saju-mini__body{ display:none; }
 
 /* ── 미니 사주 표 최소 글씨/여백 ───────────────────────── */
-#saju-mini { font-size: 12px; }                   /* 기본 폰트 크기 ↓ */
-#saju-mini .mini-grid { font-size: 11px; }        /* 표 안 폰트 더 ↓ */
+#saju-mini { font-size: 13px; }                   /* 기본 폰트 크기 ↓ */
+#saju-mini .mini-grid { font-size: 12px; }        /* 표 안 폰트 더 ↓ */
 #saju-mini thead th, 
 #saju-mini td { text-align: center; }
 #saju-mini th, 
@@ -922,7 +922,8 @@ body {
   <span class="note-links">
     <a href="/terms1.html">이용약관</a> |
     <a href="/privacy1.html">개인정보취급방침</a> |
-    <a href="/business-info1.html">사업자정보확인</a>
+    <a href="/business-info1.html">사업자정보확인</a> |
+      <a href="/refund.html">교환 및 환불규정</a>
   </span>
 </div>
 
@@ -1692,6 +1693,9 @@ document.addEventListener("DOMContentLoaded", ()=>{ wireProfileEditEvents(); });
     });
   })();
 </script>
+
+
+
 
 
 </body>
