--- a/public/index.html
+++ b/public/index.html
@@ -925,6 +925,9 @@ body {
 <div class="note-box">
   ※ 태어난 분대가 20~40분(30분 근처)에 있는 분은 정확한 시주가 산출되지 않을 수도 <br>있으니 따로 확인해 주세요! 한국썸머타임은 적용된 상태입니다.
   <br>
+     <span style="color:#d32f2f;font-weight:700">
+    [사주정보 출력시 탭간 이동은 하지 않도록 새창에서 실행하세요!!]
+  </span>
   <span class="note-links">
     <a href="/terms1.html">이용약관</a> |
     <a href="/privacy1.html">개인정보취급방침</a> |
