--- a/public/index.html
+++ b/public/index.html
@@ -548,6 +548,33 @@ body {
 #saju-mini { z-index: 2147483647; }
 #saju-mini, #saju-mini * { pointer-events: auto; }
 
+/* === Mini 창 폰트/여백 오버라이드 (맨 아래에 추가) === */
+.saju-mini, #saju-mini { 
+  font-size: 16px !important;          /* 본문 기본 글자 */
+  line-height: 1.35;    
+}
+
+#saju-mini .mini-grid,
+.saju-mini table { 
+  font-size: 15px !important;          /* 표 안 글자 */
+}
+
+#saju-mini small { 
+  font-size: 0.9em !important;         /* 괄호(십신) */
+  color: #555;
+}
+
+#saju-mini th, 
+#saju-mini td {
+  padding: 4px 6px !important;         /* 너무 빽빽하면 살짝 넓힘 */
+  line-height: 1.25 !important;
+}
+
+#saju-mini .saju-chip { 
+  font-size: 12px !important; 
+  padding: 2px 6px !important; 
+  border-radius: 6px !important;
+}
 
 /* 작은 창 끝 */
 
