--- a/public/index.html
+++ b/public/index.html
@@ -477,7 +477,7 @@ body {
   position: fixed;     /* ✅ 스크롤해도 화면에 고정 */
   right: 16px;
   bottom: 16px;
-  width: 300px;
+  width: 420px;  /* ✅ 사주창 넓이 */
   max-width: calc(100vw - 24px);
   background:#f8f1c9;
   border:1px solid #ddd;
