--- a/public/index.html
+++ b/public/index.html
@@ -477,8 +477,8 @@ body {
   position: fixed;     /* ✅ 스크롤해도 화면에 고정 */
   right: 16px;
   bottom: 16px;
-  width: 500px;  /* ✅ 사주창 넓이 */
-  max-width: calc(100vw - 24px);
+  width: 600px;  /* ✅ 사주창 넓이 */
+  /* max-width: calc(100vw - 24px); */
   background:#f8f1c9;
   border:1px solid #ddd;
   border-radius:12px;
@@ -575,6 +575,9 @@ body {
   padding: 2px 6px !important; 
   border-radius: 6px !important;
 }
+
+
+
 
 /* 작은 창 끝 */
 
