--- a/public/index.html
+++ b/public/index.html
@@ -477,8 +477,8 @@ body {
   position: fixed;     /* ✅ 스크롤해도 화면에 고정 */
   right: 16px;
   bottom: 16px;
-  width: 600px;  /* ✅ 사주창 넓이 */
-  /* max-width: calc(100vw - 24px); */
+  width: 300px;  /* ✅ 사주창 넓이 */
+  max-width: calc(100vw - 24px); 
   background:#f8f1c9;
   border:1px solid #ddd;
   border-radius:12px;
@@ -489,6 +489,16 @@ body {
   z-index: 9999;
   overflow: hidden;
 }
+
+
+/* 미니창 폭 강제 오버라이드 */
+#saju-mini, .saju-mini {
+  width: 420px !important;          /* 원하는 값으로 */
+  max-width: calc(100vw - 24px) !important;  /* 모바일 안전장치 */
+  min-width: 420px !important;      /* 내부 레이아웃에 의해 줄어드는 것 방지 */
+}
+
+
 
 .saju-mini__bar{
   display:flex; align-items:center; justify-content:space-between;
